# vqvae

./: .gitignore  README.md  instruction.txt  knn_graph_k10.npz  pyproject.toml  requirements.txt  test_fast_pipeline.py
configs/: data.yaml  fashion  quantize.yaml  quantize_benchmark.yaml  quantize_cifar10.yaml  quantize_cifar10_k1024.yaml  train.yaml  train_fashion.yaml  train_transformer.yaml  vae.yaml  vae_fashion.yaml
demos/: __init__.py  codebook_comparison.py  codebook_sampling.py  interactive_exploration.py  kmedoids_geodesic_analysis.py  vae_knn_analysis.py
docs/: Configuration.md  autoregressive_pipeline.md  cifar10_quantization_analysis.md  codebook_comparison_tests.md  comparison_cifar10.md  demos.md  experiments.md  fashion_mnist_results.md  fashion_mnist_vae_decision.md  geo_shortest_paths.md  knn_graph.md  project_journal.md  riemann_graph_effect.md  riemannian_metric.md  summuryToSpatialVAE.md  transformer.md  vae_mnist.md
scripts/: README.md  compare_all_approaches.py  convert_codebook_safe.py  demo_vae_knn.py  download_data.sh  evaluate_baseline_simple.py  interactive_vae_demo.py  riemann_graph_effects.py  riemann_sanity.py  run_all_codebook_tests.sh  run_baseline_pipeline.py  run_cifar10_spatial_geodesic_pipeline.py  run_cifar10_vanilla_euclidean_pipeline.py  run_cifar10_vanilla_geodesic_pipeline.py  run_complete_cifar10_pipeline.sh  run_experiments.sh  run_fashionmnist_spatial_geodesic_pipeline.py  run_fashionmnist_vanilla_euclidean_pipeline.py  run_fashionmnist_vanilla_geodesic_pipeline.py  run_train_vae.sh  select_dataset.sh  setup_env.sh  (+2 more)
(+203 files in other folders)
