[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vqvae"
version = "0.1.0"
description = "VAE with k-NN Geodesic Analysis"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision", 
    "numpy",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "omegaconf",
    "hydra-core",
    "mlflow",
    "pytest"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
